apps/kube.martini.moe/skooner-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skooner
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  tls:
    - hosts:
        - skooner.kube.martini.moe
  rules:
  - host: skooner.kube.martini.moe
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: skooner
            port:
              number: 80
