apps/kube.martini.moe/workadventure-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - workadventure.kube.martini.moe
      secretName: workadventure-cert
  rules:
    - host: workadventure.kube.martini.moe
      http: {}
