apps/kube.martini.moe/workadventure-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-pusher
  namespace: workadventure
spec:
  stripPrefix:
    prefixes:
      - /pusher
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: workadventure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: workadventure-stripprefix-pusher@kubernetescrd
spec:
  tls:
    - hosts:
       - workadventure.kube.martini.moe
      secretName: workadventure-cert
  rules:
    - host: workadventure.kube.martini.moe
      http:
        paths:
          - path: "/pusher"
            backend:
              service:
                name: pusher
                port:
                  name: http
            pathType: Prefix
          - path: "/"
            backend:
              service:
                name: front
                port:
                  name: http
            pathType: Prefix
